# pdf-to-json

./: .gitignore  README.md  pyproject.toml
src/: app.py  pdf_to_json.py
tests/: html_to_json_test.py  pdf_parser_test.py
